# atuin

crates/atuin-server/: Cargo.toml  server.toml
crates/atuin-server-database/src/: lib.rs
crates/atuin-server-sqlite/: Cargo.toml
crates/atuin-server-sqlite/migrations/: create_history.sql  create_sessions.sql
crates/atuin-server-sqlite/src/: lib.rs
