[package]
name = "atuin-server-sqlite"
version = "0.1.0"
edition = "2021"
description = "SQLite backend for Atuin server"
authors = ["Atuin Contributors <hello@atuin.sh>"]
license = "MIT"

[dependencies]
rusqlite = { version = "0.28", features = ["bundled"] }
atuin-common = { path = "../../atuin-common", version = "18.2.0" }
atuin-server-database = { path = "../../atuin-server-database", version = "18.2.0" }
eyre = { workspace = true }
tracing = "0.1"
time = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
